<resources>
    <string name="app_name" translatable="false">Traveler</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Apropos</string>
    <string name="create_profile">Creation du compte</string>
    <string name="welcome">Zéro morts sur nos routes. Restez en alerte et en sécurité avec Traveler</string>
    <string name="username">pseudonyme (*)</string>
    <string name="password">mot de passe</string>
    <string name="for_publicity" translatable="false">pour la publicite/for advertising</string>
    <string name="password_again">mot de passe (a nouveau)</string>
    <string name="no_telephone">Numéro de téléphone (*)</string>
    <string name="click_to_change">cliquez pour modifier</string>
    <string name="my_location">Ma Position</string>
    <string name="main_menu_activity_title">Accueil</string>
    <string name="confirm_journey">Enregistrer un Voyage</string>
    <string name="new_repport_complaint">Messages</string>
    <string-array name="problem_types">
        <item>"Accident"</item>
        <item>"Excès de vitesse"</item>
        <item>"Chauffeur Incompétent/Inexpérimenté"</item>
        <item>"Véhicule surchargé"</item>
        <item>"Véhicule en panne"</item>
        <item>"autre…"</item>
    </string-array>
    <string-array name="countries_codes" translatable="false">
        <item>"cmr"</item>
        <item>"fr"</item>
    </string-array>
    <string-array name="countries">
        <item>"Cameroun"</item>
        <item>"France"</item>
    </string-array>
    <string-array name="cmr_compagnies_names">
        <item>"Personnel"</item>
        <item>"Bucca Voyage"</item>
        <item>"Touristic Express"</item>
        <item>"Finex Voyage"</item>
        <item>"Camrail Intercity"</item>
        <item>"Autre"</item>
    </string-array>
    <string name="cmr_town_1" translatable="false">Douala|4.036072|9.6724234</string>
    <string name="cmr_town_2" translatable="false">Yaoundé|3.8157332|11.526508</string>
    <string name="cmr_town_3" translatable="false">Bafoussam|5.4807502|10.389804</string>
    <string name="cmr_town_4" translatable="false">Edea|3.7999774|10.1147172</string>
    <string name="cmr_town_5" translatable="false">Maroua|10.5972501|14.2914526</string>
    <string name="cmr_town_6" translatable="false">Buea|4.1500128|9.2220345</string>
    <string name="cmr_town_7" translatable="false">Limbe|4.0193615|9.2126896</string>
    <string name="cmr_town_8" translatable="false">Garoua|9.3068602|13.3989634</string>
    <string name="cmr_town_10" translatable="false">Bamenda|5.9594398|10.1534798</string>
    <string name="cmr_town_11" translatable="false">Dschang|5.4475619|10.063261</string>
    <string name="cmr_town_12" translatable="false">Ebolowa|2.9181643|11.1566153</string>
    <string name="cmr_town_13" translatable="false">Ngaoundére|7.3303988|13.5812464</string>
    <string name="cmr_car_immatriculation_regex_patern" translatable="false">[A-Z]{2}[0-9]{3}[A-Z0-9][A-Z]</string>
    <string name="cmr_immatriculation_example" translatable="false"> (CE111AA, LT2251Z, ...) </string>
    <string-array name="fr_compagnies_names">
        <item>"SNCF"</item>
        <item>"TRANSDEV"</item>
        <item>"RATP"</item>
        <item>"OPTILE"</item>
        <item>"PROCARS"</item>
        <item>"Autre"</item>
    </string-array>
    <string name="fr_town_1" translatable="false">Paris|48.8588377|2.2775176</string>
    <string name="fr_town_2" translatable="false">Marseille|43.2803692|5.3350995</string>
    <string name="fr_town_3" translatable="false">Lyon|45.7579502|4.8001016</string>
    <string name="fr_town_4" translatable="false">Toulouse|43.6006786|1.3628015</string>
    <string name="fr_town_5" translatable="false">Nice|43.7030414|7.1828949</string>
    <string name="fr_town_6" translatable="false">Nantes|47.2382007|-1.6307597</string>
    <string name="fr_town_7" translatable="false">Strasbourg|48.5690923|7.6920547</string>
    <string name="fr_town_8" translatable="false">Montpellier|43.6100166|3.8391422</string>
    <string name="fr_town_10" translatable="false">Bordeaux|44.8637226|-0.6211603</string>
    <string name="fr_town_11" translatable="false">Lille|50.6310623|3.0121412</string>
    <string name="fr_town_12" translatable="false">Rennes|48.1159102|-1.7234738</string>
    <string name="fr_town_13" translatable="false">Reims|49.2535458|4.0200693</string>
    <string name="fr_car_immatriculation_regex_patern" translatable="false">[A-Z]{2}\\-[0-9]{3}\\-[A-Z]{2}</string>
    <string name="fr_immatriculation_example" translatable="false"> (AA-123-AA, AB-344-CA, ...) </string>
    <string name="matriculation_number">Immatriculation du vehicule (*)</string>
    <string name="description">Description</string>
    <string name="end_journey">Achever le Voyage</string>
    <string name="annuler_voyage">Annuler le Voyage</string>
    <string name="journey_management">Gestion du Voyage</string>
    <string name="speed_dimen" formatted="false">%s | Vitesse: %s Kmph</string>
    <string name="cancel">Annuler</string>
    <string name="situation">Choisissez la situation?</string>
    <string name="send">Envoyer</string>
    <string name="howserious">Niveaux de Gravite</string>
    <string name="title9">9. Suspecter les domages médullaires</string>
    <string name="title8">8. Traiter les plaies ouvertes</string>
    <string name="title7">7. Fournir de l\'aide dans des situations graves</string>
    <string name="title6">6. Techniques de sauvetage des vies</string>
    <string name="title5">5. Vérifier la présence d\'une obstruction dans la bouche et la gorge de la personne</string>
    <string name="title4">4. Appeler de l\'aide</string>
    <string name="title3">3. Chercher des signes de respiration</string>
    <string name="title2">2. Vérifier d\'autres blessées</string>
    <string name="title11">11. Eviter de nourrir les blessées</string>
    <string name="title10">10. Garder les victimes au chaud</string>
    <string name="title1">1. Vérifier son état</string>
    <string name="tip6">\u2022 Assurez-vous que la personne a un poul et respire sur le chemin de l\'hôpital. S\'il/elle cesse de respirer, soyez prêt à commencer la RCR ou EAR dans le véhicule.</string>
    <string name="tip5">\u2022 En cas de blessure qui saigne, soulevez la partie blessée au-dessus du niveau du corps de la personne et appliquez une pression sur la région. Maintenez la pression jusqu\'à ce que vous atteignez l\'hôpital. Cela aide à contrôler et éventuellement arrêter le saignement.</string>
    <string name="tip4">\u2022 Si aucune blessure n\'apparait au niveau des membres, le patient peut être transporté dans une position assise.</string>
    <string name="tip3">\u2022 Assurez vous que la personne se couche à plat ventre.</string>
    <string name="tip2">\u2022 Gardez son cou et son dos en position droite. Vous pouvez placer une serviette roulée ou un tissu épais sous le cou pour un meilleur support.</string>
    <string name="tip1">\u2022 Le patient doit être transporté sur un brancard ou un carton rigide. Ceci est important car la réduction de la quantité de mouvement est essentielle pour éviter aux blessures de s\'aggraver.</string>
    <string name="spinalinjury">Si le cou de la personne est dans une position inconfortable (pas normalement placé) ou la personne est inconsciente, ne pas la déplacer. Obtenez de l\'aide immédiatement. Cela pourrait signifier que le cou de la personne est cassé. En décidant de la déplacer dans une telle situation, vous risquez lui causer plus de mal que de bien.</string>
    <string name="severecondition">En cas de saignement de la bouche ou de vomissements, tournez la personne vers son côté. Cela permettra de réduire le risque de suffocation. Placez le bras de la personne qui est sous lui en ligne droite et le bras le plus proche de vous sur sa poitrine.</string>
    <string name="breathsigns">Ensuite, vérifiez si la personne respire et s\'il a un pouls.</string>
    <string name="callhelp">Appelez immédiatement une ambulance ou conduisez la personne à l\'hôpital. Si vous avez des informations concernant l\'état du patient, n\'hésitez pas à en parler avec les médécins.</string>
    <string name="checkinjury">Si d\'autres personnes sont blessées, veuillez évaluer l\'étendue des blessures. Par exemple:  saigne t\'il à la tête, au cou, aux bras, aux jambes, à l\'abdomen, au dos, etc. Occupez vous d\'abord des personnes les plus calmes, elles sont généralement plus gravement blessées ou ne peuvent pas respirer. Les personnes qui peuvent parler ou crier, d\'autre part, peuvent respirer et donc peuvent être prises en charge un peu plus tard. Demandez le nom du patient, s\'il répond, cela signifie qu\'il est capable de comprendre la situation et n\'a probablement pas subi de blessure grave à la tête.</string>
    <string name="checkobstruction">Si vous n\'entendez plus aucun bruit respiratoire, vérifier la bouche de la victime à la recherche d\'une obstruction. S\'il y a quelque chose qui obstrue les voies respiratoires, utilisez l\'index et le majeur pour procéder au dégagement des voies respiratoires.</string>
    <string name="checkself">Si vous avez été blessé au cours de l\'accident, vérifiez en priorité l\'état de vos blessures. Essayez d\'évaluer dans quelle mesure vous pouvez déplacer vos membres, et si vous ressentez des symptômes tels que des étourdissements, etc. Rappelez-vous que vous devez être suffisamment en forme pour aider les autres.</string>
    <string name="feedingvictim">Ne pas donner à la victime de l\'eau, de la nourriture ou d\'autres fluides à travers la bouche. En effet, ceci pourrait conduire a un étouffement.</string>
    <string name="lifesaving">S\'il n\'y a pas de pouls, commencez la EAR (External Air Resuscitation) ou la RCR (Réanimation Cardio-Pulmonaire). Il existe 3 types de EAR; Bouche-à-bouche, bouche-à-nez, bouche-à-masque.</string>
    <string name="openwounds">S\'il y a de vastes plaies, essayez de contrôler le saignement en comprimant la zone à l\'aide d\'un chiffon. Appuyez avec vos paumes plutôt que du bout des doigts.</string>
    <string name="warmness">Très souvent, les victimes d\'accidents sentent très froid à cause du choc. Par conséquent, les garder au chaud est essentiel à la survie. Vous pouvez utiliser ce que vous avez, comme un T-shirt ou une veste.</string>
    <string name="default_points" translatable="false">%d TPOINTS</string>
    <string name="default_user" translatable="false">Stevy</string>
    <string name="pref_title_speed">Persister l\'affichage de la vitesse </string>
    <string name="pref_description_speed"> Il ne sera possible d\effacer la notification présentant votre vitesse en temps réel
        qu\'en annulant ou en terminant le voyage en cours
    </string>
    <string name="pref_title_highspeed">Autoriser les alertes vocales</string>
    <string name="pref_description_highspeed">Autoriser les notifications vocales en cas d\'excès de vitesse</string>
    <string name="pref_impact_title">Notifier en cas de détection de chocs</string>
    <string name="pref_impact_description">Afficher des notifications présentant l\'intensité d\'un choc en cas de détection</string>
    <string name="select_language">Changer de langue</string>
    <string name="pref_sms_title">Autoriser la notification par SMS</string>
    <string name="pref_sms_description">Autoriser l\'envoie de notifications d\'incidents lorsqu\'une détection survient
        en l\'absence de connexion internet. NB: des charges supplémentaires liées à votre opérateur peuvent  s\'appliquer</string>
    <string name="pref_title_impact_sound">Accompagner les notifications d\'incidents d\'une alerte sonore</string>
</resources>