<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="persist_speed_pref"
        android:summary="@string/pref_description_speed"
        android:title="@string/pref_title_speed" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="high_speed_pref"
        android:summary="@string/pref_description_highspeed"
        android:title="@string/pref_title_highspeed" />
    <!-- Parent preference -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="show_impact_pref"
        android:title="@string/pref_impact_title"
        android:summary="@string/pref_impact_description"/>
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="show_impact_pref"
        android:key="play_impact_sound_pref"
        android:title="@string/pref_title_impact_sound" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="sms_notif_pref"
        android:title="@string/pref_sms_title"
        android:summary="@string/pref_sms_description"/>

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/languages"
        android:entryValues="@array/languages"
        android:key="language_pref"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/select_language" />

</PreferenceScreen>
