<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.satra.traveler.AidActivity"
    tools:showIn="@layout/activity_aid">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkself"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkinjury"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title3"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breathsigns"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title4"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callhelp"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title5"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkobstruction"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title6"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifesaving"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title7"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/severecondition"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title8"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openwounds"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title9"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinalinjury"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title10"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warmness"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title11"
            android:textSize="@dimen/titlesize"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedingvictim"
            android:textSize="@dimen/textsize"
            android:layout_margin="@dimen/textmargin"/>
    </LinearLayout>
</ScrollView>
