<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ma_position"
            android:icon="@drawable/ic_menu_mylocation"
            android:title="@string/my_location" />
    </group>

    <item android:title="@string/journey_management">
        <menu>
            <item
                android:id="@+id/nav_new_journey"
                android:icon="@drawable/ic_trip_add"
                android:title="@string/confirm_journey" />
<!--            <item
                android:id="@+id/nav_confirm_journey"
                android:icon="@drawable/ic_confirm_journey"
                android:title="@string/confirmer_voyage" />-->

            <item
                android:id="@+id/nav_end_journey"
                android:icon="@drawable/ic_confirm_journey"
                android:title="@string/end_journey" />
            <item
                android:id="@+id/nav_cancel_journey"
                android:icon="@drawable/ic_cancel_journey"
                android:title="@string/annuler_voyage" />
            <item
                android:id="@+id/nav_repport_complaint"
                android:icon="@drawable/ic_incident"
                android:title="@string/new_repport_complaint" />
<!--
            <item
                android:id="@+id/nav_upadate_journey"
                android:icon="@drawable/ic_update"
                android:title="@string/mettre_a_jour_parametres_voyage" />
-->

        </menu>
    </item>

</menu>
