<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.satra.traveler.VictimeTransportationActivity"
    tools:showIn="@layout/activity_victime_transportation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip1"
                android:textSize="@dimen/textsize"
                android:layout_margin="@dimen/textmargin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip2"
                android:textSize="@dimen/textsize"
                android:layout_margin="@dimen/textmargin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip3"
                android:textSize="@dimen/textsize"
                android:layout_margin="@dimen/textmargin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip4"
                android:textSize="@dimen/textsize"
                android:layout_margin="@dimen/textmargin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip5"
                android:textSize="@dimen/textsize"
                android:layout_margin="@dimen/textmargin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip6"
                android:textSize="@dimen/textsize"
                android:layout_margin="@dimen/textmargin"/>

        </LinearLayout>

</ScrollView>
