<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.satra.traveler.MainActivity"
    >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"

        android:layout_marginBottom="15dp"
        android:layout_centerInParent="true" />

    <EditText
        android:id="@+id/no_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/no_telephone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/no_telephone"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/panneau_pub"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/new_york_forum_prix_jeune_entreprise"
        android:gravity="center"
        android:text="@string/for_publicity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/icone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableBottom="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/username"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
