<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:alpha="0.8"
    android:background="@color/purple"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

<!--    <TextView
        android:id="@+id/panneau_pub"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#FF0000"
        android:gravity="center"
        android:text="@string/for_publicity"
        android:textAppearance="?android:attr/textAppearanceMedium" />-->
    <com.cardiomood.android.controls.gauge.SpeedometerGauge
        android:id="@+id/speedometer"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:padding="8dp" />

    <TextView
        android:id="@+id/speedtext"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/speed_dimen"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tpointsTextview"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_loyalty"
        android:drawableStart="@drawable/ic_loyalty"
        android:text="@string/default_points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/default_user"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:textSize="25sp"
            android:typeface="serif" />

</LinearLayout>
